# MusicMosaic

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
backend/: pyproject.toml
backend/app/: __init__.py  main.py  schemas.py
backend/app/api/: routes.py
backend/app/pipeline/: audio_io.py  cohesion.py  features.py  index.py  job.py  match.py  metrics.py  nmf.py  palette.py  reconstruct.py  rerank.py  segment.py  stems.py  transform.py  youtube.py
backend/data/cache/youtube/: index.json
backend/tests/: test_cohesion_transforms.py  test_job_fidelity.py  test_key_shift_and_runs.py  test_match_viterbi.py  test_nmf.py  test_quality_metrics.py  test_reconstruct.py  test_rerank_spectral.py  test_segment.py  test_youtube_and_params.py  test_youtube_cache.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: MosaicGrid.tsx  PlaybackBar.tsx  ReconstructingView.tsx  StatsPanel.tsx  TileDetail.tsx  TimelineStrip.tsx  UploadPanel.tsx
frontend/src/hooks/: useSyncedPlayback.ts
frontend/src/styles/: theme.css
