[project]
name = "musicmosaic"
version = "0.1.0"
description = "Reconstruct one song from five others via acoustic mosaic matching"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "librosa>=0.10.2",
    "soundfile>=0.12.1",
    "faiss-cpu>=1.8.0",
    "pyloudnorm>=0.1.1",
    "pydantic>=2.9.0",
    "yt-dlp>=2024.8.0",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "transformers>=4.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[project.scripts]
musicmosaic = "app.pipeline.job:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
